grade-reports/exam-2/test-hard-02.txt
CD to .. 
/home/mattox/repos/cs225/fa16-exam2-grading/submissions/xwang104
###############################
##                           ##
##     Grading question      ##
##                           ##
###############################
Grader dir is /home/mattox/repos/cs225/fa16-exam2-grading/code-grading/scripts
qid is hard-02
variant is
test_dir is /home/mattox/repos/cs225/fa16-exam2-grading/code-grading/scripts/tests/hard-02/
fullTmpDir = /home/mattox/repos/cs225/fa16-exam2-grading/submissions/xwang104/grade-.pp8
:: Compiling...
g++ -std=c++0x -c -g -O0 -Wall -Wextra -Wno-unused-function   -c -o hard.o hard.cpp
hard.cpp: In function ‘void merge(LinkedList*, LinkedList*, LinkedList*)’:
hard.cpp:23:27: error: cannot convert ‘Node*’ to ‘LinkedList*’ in assignment
                     mrg = a;
                           ^
hard.cpp:25:28: error: cannot convert ‘LinkedList*’ to ‘Node*’ in assignment
                     prev = mrg;
                            ^~~
hard.cpp:35:27: error: cannot convert ‘Node*’ to ‘LinkedList*’ in assignment
                     mrg = b;
                           ^
hard.cpp:37:28: error: cannot convert ‘LinkedList*’ to ‘Node*’ in assignment
                     prev = mrg;
                            ^~~
<builtin>: recipe for target 'hard.o' failed
make: *** [hard.o] Error 1
Could not compile hard.o.

Grade for question : 0/100


~ ~ ~

Grade: 0

Details:
test,grade
_compiled,0
